--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MarsRealEstate</string>
+    <string name="app_name">Mars Real Estate</string>
     <string name="show_all">Show all</string>
     <string name="show_rent">Rent</string>
     <string name="show_buy">Buy</string>
